solution/mariadb.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  creationTimestamp: null
  labels:
    app: mariadb
  name: mariadb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: mariadb
    spec:
      containers:
        - image: quay.io/sclorg/mariadb-1011-c9s:c9s
          name: mariadb-1011-c9s
          resources: {}
  serviceName: mariadb
