solution/grr.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: grr
  name: grr
spec:
  # replicas: 3
  selector:
    matchLabels:
      app: grr
  template:
    metadata:
      labels:
        app: grr
    spec:
      containers:
        - image: registry.plmlab.math.cnrs.fr/anf2024/grr:v4.3.5-docker-8
          name: grr
          ports: 
            - containerPort: 8080
              name: web
            - containerPort: 9090
              name: metrics
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: grr
  name: grr
spec:
  type: ClusterIP
  selector:
    app: grr
  ports:
  - name: web
    protocol: TCP
    port: 8080
